remove helper method as it wasn't necessary, change class name of fingerprint from PiPFingerprint->SetPiPActionsFingerprint, add functionality for receiving broadcasts, updated getActionList to return a list of actions as defined by userActionList, added rewind and fast-forward buttons with placeholder functionality